# FLARE

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CIFAR_image_detection.h  CMakeLists.txt  MNIST_digit_detection.h  cnn_test.hpp  diabetes_logistic_regression.hpp  gan_example.hpp  heart_attack_prediction.h  learn_addition.hpp  sarcasm_detection_nlp.hpp  xor_classifier.cpp  xor_classifier.hpp
flare/: CMakeLists.txt  dataset.hpp  fl_assert.hpp  fl_types.hpp  flare.hpp  main.cpp  sequential.cpp  sequential.hpp  tokenizer.hpp
flare/activations/: CMakeLists.txt  elu.hpp  include_activations.hpp  linear.hpp  relu.hpp  selu.hpp  sigmoid.hpp  softmax.hpp  softplus.hpp  softsign.hpp  swish.hpp  tanh.hpp
flare/layers/: CMakeLists.txt  activation.hpp  activation.ipp  batch_normalization.hpp  batch_normalization.ipp  bidirectional.hpp  bidirectional.ipp  conv2d.hpp  conv2d.ipp  conv2dtranspose.hpp  conv2dtranspose.ipp  dense.hpp  dense.ipp  dropout.hpp  dropout.ipp  embedding.cpp  embedding.hpp  embedding.ipp  flatten.hpp  flatten.ipp  globalaveragepooling1d.cpp  globalaveragepooling1d.hpp  gru.hpp  gru.ipp  include_layers.hpp  layer.hpp  leaky_relu.hpp  leaky_relu.ipp  lstm.hpp  lstm.ipp  maxpooling2d.cpp  maxpooling2d.hpp  multihead_attention.hpp  multihead_attention.ipp  reshape.hpp  reshape.ipp
flare/layers/rnn/: gru_cell.hpp  lstm_cell.hpp
flare/loss/: CMakeLists.txt  binary_cross_entropy.hpp  categorical_cross_entropy.hpp  include_loss.hpp  kl_divergence.hpp  loss_function.hpp  mean_absolute_error.hpp  mean_squared_error.hpp
flare/metrics/: binary_accuracy.hpp  categorical_accuracy.hpp  include_metrics.hpp  metric.hpp  precision.hpp  recall.hpp
flare/optimizers/: adam.cpp  adam.hpp  include_optimizers.hpp  optimizer.hpp  rmsprop.cpp  rmsprop.hpp  sgd.cpp  sgd.hpp
flare/weights/: glorot.hpp  he.hpp  include_weights.hpp  lecun.hpp  weights.hpp
lib/: .gitignore
lib/Eigen/doc/: SparseQuickReference.dox
lib/Eigen/scripts/: cdashtesting.cmake.in
lib/Eigen/unsupported/Eigen/CXX11/src/Tensor/: TensorIO.h
lib/opencv/: README.md
orion/: CMakeLists.txt  dataset.hpp  main.cpp  orion.hpp  orion_assert.hpp  orion_types.hpp  sequential.cpp  sequential.h  sequential.hpp
orion/activations/: CMakeLists.txt  elu.hpp  include_activations.hpp  linear.hpp  relu.hpp  selu.hpp  sigmoid.hpp  softmax.hpp  softplus.hpp  softsign.hpp  swish.hpp  tanh.hpp
orion/internal/: CMakeLists.txt  batcher.cpp  batcher.hpp  include_internal.hpp  print.hpp  print_tensor.cpp  print_tensor.hpp
orion/layers/: CMakeLists.txt  activation.hpp  activation.ipp  batch_normalization.hpp  batch_normalization.ipp  conv2d.cpp  conv2d.hpp  conv2d.ipp  conv2dtranspose.hpp  conv2dtranspose.ipp  dense.hpp  dense.ipp  dropout.hpp  dropout.ipp  embedding.cpp  embedding.hpp  flatten.hpp  flatten.ipp  globalaveragepooling1d.cpp  globalaveragepooling1d.hpp  gru.hpp  gru.ipp  include_layers.hpp  layer.hpp  leaky_relu.hpp  leaky_relu.ipp  maxpooling2d.cpp  maxpooling2d.hpp  reshape.hpp  reshape.ipp
orion/layers/rnn/: gru_cell.hpp
orion/loss/: CMakeLists.txt  binary_cross_entropy.cpp  binary_cross_entropy.hpp  categorical_cross_entropy.cpp  categorical_cross_entropy.hpp  include_loss.hpp  kl_divergence.cpp  kl_divergence.hpp  loss.hpp  loss_function.hpp  mean_absolute_error.cpp  mean_absolute_error.hpp  mean_squared_error.cpp  mean_squared_error.hpp
orion/metrics/: CMakeLists.txt  accuracy.cpp  accuracy.hpp  include_metrics.hpp  loss.cpp  loss.hpp  metric.cpp  metric.hpp
orion/optimizers/: CMakeLists.txt  adam.cpp  adam.hpp  include_optimizers.hpp  optimizer.hpp  rmsprop.cpp  rmsprop.hpp  sgd.cpp  sgd.hpp
orion/weights/: CMakeLists.txt  glorot.hpp  he.hpp  include_weights.hpp  lecun.hpp  random_generator.cpp  random_generator.hpp  weights.hpp
